--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 .off-section {
     width: 1320px;
     height: 820px;
-    font-family: 'Inter', sans-serif;
+    font-family: '"Inter"', sans-serif;
 }
 
 .off-section h1 {
@@ -98,7 +98,7 @@ body {
 
 .party-content p {
     color: rgba(255, 255, 255, 0.80);
-    font-family: Inter;
+    font-family: "Inter";
     font-size: 18px;
     font-weight: 400;
     margin-top: -15px;
@@ -107,7 +107,7 @@ body {
 
 .party-content a {
     color: #FFF;
-    font-family: Inter;
+    font-family: "Inter";
     font-size: 20px;
     font-weight: 700;
     text-decoration: none;
@@ -118,4 +118,149 @@ body {
     width: 319.83px;
     height: 464.662px;
     margin-right: 125px;
+}
+
+/* Join section */
+.join-section {
+    margin-top: 120px;
+    width: 1320px;
+    height: 482px;
+    border-radius: 16px;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+}
+
+.join-content {
+    font-family: "Inter";
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 50px 285px 0 285px;
+}
+
+.join-content span {
+    color: #F00;
+}
+
+.join-content h3 {
+    color: #070211;
+}
+
+.join-section button {
+    margin-top: 50px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 16px 32px;
+    border-radius: 8px;
+    background: #F00;
+    border: none;
+}
+
+/* coming soon section */
+.coming-section {
+    margin-top: 120px;
+    width: 1320px;
+    height: 500px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.left {
+    text-align: left;
+}
+
+.left h3 {
+    color: #F00;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.left h1 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.left p {
+    width: 350px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.mid {
+    width: 463px;
+    height: 463px;
+    border-radius: 463px;
+    border: 15px solid #F00;
+}
+
+.mid img {
+    width: 364.844px;
+    height: 364.844px;
+    margin: 49.08px;
+}
+
+.right {
+    text-align: left;
+    font-family: "Inter";
+}
+
+.right h1 {
+    color: #F00;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.right p {
+    width: 275px;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.right img {
+    width: 140px;
+    height: 140px;
+    margin-top: 30px;
+}
+
+/* Sale section */
+.sale-section {
+    margin-top: 120px;
+    width: 1320px;
+}
+
+.sale-content h5 {
+    color: #070211;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.sale-content h1 {
+    color: #070211;
+    font-size: 72px;
+    font-weight: 900;
+    margin-top: -10px;
+}
+
+.sale-content h1>span {
+    color: #F00;
+}
+
+.sale-content p {
+    width: 1070px;
+    margin: 0 auto;
+    margin-top: -20px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 500;
+}
+.sale-pictures > div{
+    display: flex;
 }
