--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 /* Common styles */
 body {
-    font-family: 'Merriweather', serif;
-    margin-top: 50px;
+    font-family: 'Merriweather';
+    margin: 0;
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .all {
     display: block;
     margin: 0 auto;
     text-align: center;
-
+    width: 1320px;
+    margin-top: 100px;
 }
 
 /* Header section */
-.header {
+header {
     border-radius: 16px;
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url("./images/Banner\ Image.png");
     height: 600px;
-    width: 1320px;
 }
 
 .banner-content {
@@ -41,9 +46,8 @@ body {
 
 /* off section */
 .off-section {
-    width: 1320px;
     height: 820px;
-    font-family: '"Inter"', sans-serif;
+    font-family: "Inter";
 }
 
 .off-section h1 {
@@ -75,12 +79,10 @@ body {
 .party-section {
     border-radius: 16px;
     background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(./images/Vectorrr.png);
-    width: 1320px;
     height: 600px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 120px;
 }
 
 .party-content {
@@ -122,8 +124,7 @@ body {
 
 /* Join section */
 .join-section {
-    margin-top: 120px;
-    width: 1320px;
+    ;
     height: 482px;
     border-radius: 16px;
     background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
@@ -158,8 +159,7 @@ body {
 
 /* coming soon section */
 .coming-section {
-    margin-top: 120px;
-    width: 1320px;
+    ;
     height: 500px;
     display: flex;
     justify-content: space-around;
@@ -186,7 +186,7 @@ body {
 .left p {
     width: 350px;
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+    font-family: "Inter";
     font-size: 20px;
     font-weight: 400;
 }
@@ -230,8 +230,7 @@ body {
 
 /* Sale section */
 .sale-section {
-    margin-top: 120px;
-    width: 1320px;
+    height: 980px;
 }
 
 .sale-content h5 {
@@ -261,6 +260,228 @@ body {
     font-size: 20px;
     font-weight: 500;
 }
-.sale-pictures > div{
+
+.sale-pictures {
+    margin-top: 70px;
+}
+
+.flex-pic {
     display: flex;
+    justify-content: space-between;
+}
+
+.box-img {
+    width: 790px;
+    height: 657px;
+}
+
+.fifty-off {
+    width: 429px;
+    height: 433px;
+    background-image: url("./images/Rectangle\ 1.png");
+    background-repeat: no-repeat;
+    background-size: 429px 433px;
+}
+
+.fifty-off img {
+    width: 280px;
+    height: 280px;
+    position: relative;
+    right: 215px;
+    top: 100px;
+}
+
+.red-box {
+    height: 229px;
+    z-index: -1;
+    position: relative;
+    bottom: 228px;
+}
+
+/* portfolio section */
+
+.portfolio-content {
+    text-align: left;
+}
+
+.portfolio-content h3 {
+    color: #F00;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.portfolio-content h1 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: -10px;
+    margin-bottom: 5px;
+}
+
+.portfolio-content p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 400;
+    width: 896px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-around;
+    margin: 48px 0;
+}
+
+.port-img {
+    width: 400px;
+    height: 425px;
+}
+
+.port-img img {
+    width: 380px;
+    height: 405px;
+}
+
+/* subscribe section */
+.subscribe-section {
+    height: 616px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+}
+
+.subscribe-section>div {
+    padding: 65px 212px;
+}
+
+.subscribe-section img {
+    width: 150px;
+    height: 150px;
+}
+
+.subscribe-section h1 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.subscribe-section p {
+    margin: 0 auto;
+    width: 890px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.inputs {
+    margin-top: 60px;
+}
+
+.inputs input[type="email"] {
+    width: 648px;
+    height: 72px;
+    border-radius: 50px;
+    border: none;
+    background: #FFF;
+    padding-left: 35px;
+    font-size: 18px;
+
+}
+
+.inputs input[type="submit"] {
+    width: 210px;
+    height: 73px;
+    flex-shrink: 0;
+    border-radius: 0px 50px 50px 0px;
+    border: none;
+    background: #F00;
+    color: #FFF;
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 600;
+    position: relative;
+    left: 237px;
+    bottom: 73px;
+}
+
+/* footer section */
+footer {
+    width: 1366px;
+    height: 609px;
+    background-color: #070211;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 100px;
+    font-family: "Inter";
+}
+
+.footer-content {
+    width: 1320px;
+    display: block;
+    margin: auto;
+    padding-top: 70px;
+}
+
+.address {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+
+}
+
+.rows {
+    display: flex;
+    align-items: center;
+    margin-bottom: -20px;
+}
+
+.add-text {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: left;
+}
+
+.add-info p {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.add-info img {
+    width: 24px;
+    height: 24px;
+}
+
+.icons {
+    margin: 40px auto;
+}
+
+.icons img {
+    width: 64px;
+    height: 64px;
+    margin: 20px;
+}
+
+hr {
+    width: 1320px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.15);
+    border: none;
+}
+
+.copyright {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 40px;
+}
+.copyright a{
+    text-decoration: none;
+    color: #FFF;
 }
